qa/apps/portal-ui/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-ui
  name: portal-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal-ui
  template:
    metadata:
      labels:
        app: portal-ui
    spec:
      imagePullSecrets:
      - name: images-pull
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-portal-ui:qa-199c38733eab9dedaa576041731df325bf76b5eb-1687201267 # {"$imagepolicy": "cqdg-qa-fluxcd:portal-ui"}
        name: portal-ui
        resources:
          requests:
            memory: "256Mi"
            cpu: '0.50'
          limits:
            memory: "512Mi"
            cpu: '1.00'
