qa/apps/portal-ui/services.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portal-ui
  name: portal-ui
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: portal-ui
