qa/apps/portal-ui/ingresses.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portal-ui
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - portalv2.qa.cqdg.ferlab.bio
      secretName: cqdg-ingress-certificate
  rules:
    - host: portalv2.qa.cqdg.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: portal-ui
            servicePort: 3000
